<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

    <PreferenceCategory android:title="@string/general_general">
        <ListPreference
            android:defaultValue=""
            android:entries="@array/languages"
            android:entryValues="@array/languageValues"
            android:key="pref_language_key"
            android:title="@string/settings_language_title" />
        <ListPreference
            android:defaultValue=""
            android:entries="@array/regions"
            android:entryValues="@array/regionValues"
            android:key="pref_region_key"
            android:title="@string/settings_region_title" />
    </PreferenceCategory>

    <PreferenceCategory android:title="@string/general_actions">
        <SwitchPreference
            android:key="pref_autoplay_trailers_key"
            android:title="@string/settings_autoplay_trailers_title" />
        <Preference
            android:defaultValue="0"
            android:key="pref_delete_all_data_key"
            android:summary="@string/settings_delete_all_data_summary"
            android:title="@string/settings_delete_all_data_title" />
    </PreferenceCategory>

    <PreferenceCategory android:title="@string/general_support">
        <Preference
            android:key="pref_tell_a_friend_key"
            android:title="@string/general_tell_a_friend" />
        <Preference
            android:key="pref_rate_app_key"
            android:title="@string/general_rate_app" />
        <Preference
            android:key="pref_about_app_key"
            android:title="@string/general_about" />
    </PreferenceCategory>

</PreferenceScreen>