<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="#333"
    android:orientation="vertical">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorMenuBackground"
        android:orientation="horizontal"
        android:padding="8dp">

        <TextView
            style="@style/Base.TextAppearance.AppCompat.Title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginLeft="12dp"
            android:layout_marginStart="12dp"
            android:text="@string/general_add_movie"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:textColor="@color/colorMenuText"
            android:textSize="20sp"
            tools:ignore="RelativeOverlap" />

        <ImageButton
            android:id="@+id/imgbtnClose"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:background="@drawable/flat_ripple_circle"
            android:contentDescription="@string/general_btn_close"
            android:padding="8dp"
            android:src="@mipmap/ic_close_black"
            android:tint="@color/colorMenuText" />

    </RelativeLayout>

    <View style="@style/DividerDark" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="120dp"
        android:layout_marginTop="1dp"
        android:baselineAligned="false"
        android:orientation="horizontal">

        <LinearLayout
            android:id="@+id/llManual"
            style="@style/FlatRipple"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:clickable="true"
            android:focusable="true"
            android:gravity="center"
            android:orientation="vertical"
            tools:ignore="UseCompoundDrawables">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:contentDescription="@string/dialog_add_movie_action_create_desc"
                android:src="@mipmap/ic_add_movie_create"
                android:tint="#888" />

            <TextView
                style="@style/Base.TextAppearance.AppCompat.Button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/general_btn_manual"
                android:textAllCaps="false"
                android:textColor="#ccc"
                android:textSize="16sp" />

        </LinearLayout>

        <View style="@style/DividerDarkVertical" />

        <LinearLayout
            android:id="@+id/llSelect"
            style="@style/FlatRipple"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:clickable="true"
            android:focusable="true"
            android:gravity="center"
            android:orientation="vertical"
            tools:ignore="UseCompoundDrawables">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:contentDescription="@string/dialog_add_movie_action_select_desc"
                android:src="@mipmap/ic_add_movie_select"
                android:tint="#888" />

            <TextView
                style="@style/Base.TextAppearance.AppCompat.Button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/general_btn_select"
                android:textAllCaps="false"
                android:textColor="#ccc"
                android:textSize="16sp" />

        </LinearLayout>

    </LinearLayout>

</LinearLayout>
