<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#ccc"
    android:orientation="vertical">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="1dp"
        android:layout_weight="0"
        android:background="#fff"
        android:orientation="horizontal"
        android:padding="5dp">

        <TextView
            style="@style/Base.TextAppearance.AppCompat.Title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:padding="10dp"
            android:text="@string/dialog_add_movie_genre_title"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:textSize="20sp"
            tools:ignore="RelativeOverlap" />

        <ImageButton
            android:id="@+id/imgbtnClose"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:background="@drawable/flat_ripple_circle"
            android:contentDescription="@string/general_btn_close"
            android:padding="8dp"
            android:src="@mipmap/ic_close_black" />

    </RelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#eee"
        android:baselineAligned="false"
        android:orientation="horizontal"
        android:padding="10dp">

        <EditText
            android:id="@+id/txtGenreName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/dialog_add_movie_genre_name"
            android:inputType="textCapWords" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="1dp"
        android:layout_weight="0"
        android:background="#fff"
        android:gravity="center_vertical|right"
        android:orientation="horizontal"
        android:padding="5dp">

        <Button
            android:id="@+id/btnDone"
            style="@style/MaterialDialogButton"
            android:layout_width="65sp"
            android:layout_height="wrap_content"
            android:text="@string/general_done" />
    </LinearLayout>

</LinearLayout>
