<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_gravity="right"
    android:background="@color/colorPrimary"
    android:orientation="vertical"
    tools:ignore="RtlHardcoded">

    <LinearLayout
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <View
            style="@style/DividerDarkVertical"
            android:background="#333" />

        <LinearLayout
            android:id="@+id/llAddToMyActors"
            style="@style/BrightRipple"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:clickable="true"
            android:gravity="center"
            android:orientation="vertical"
            android:paddingBottom="16dp"
            android:paddingLeft="6dp"
            android:paddingRight="6dp"
            android:paddingTop="16dp"
            tools:ignore="UseCompoundDrawables">

            <ImageView
                android:id="@+id/imgMyActors"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:layout_marginBottom="4dp"
                android:contentDescription="@string/general_btn_add_to_my_actors"
                android:src="@mipmap/ic_my_actors_disabled" />

            <TextView
                android:id="@+id/lblMyActors"
                style="@style/Base.TextAppearance.AppCompat.Title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:ellipsize="end"
                android:lines="1"
                android:text="@string/general_my_actors"
                android:textColor="#666"
                android:textSize="12sp" />

        </LinearLayout>

        <View
            style="@style/DividerDarkVertical"
            android:background="#111" />

        <View
            style="@style/DividerDarkVertical"
            android:background="#333" />

        <LinearLayout
            android:id="@+id/llAddToMyDirectors"
            style="@style/BrightRipple"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:clickable="true"
            android:gravity="center"
            android:orientation="vertical"
            android:paddingBottom="16dp"
            android:paddingLeft="6dp"
            android:paddingRight="6dp"
            android:paddingTop="16dp"
            tools:ignore="UseCompoundDrawables">

            <ImageView
                android:id="@+id/imgMyDirectors"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:layout_marginBottom="4dp"
                android:contentDescription="@string/general_btn_add_to_my_directors"
                android:src="@mipmap/ic_my_directors_disabled" />

            <TextView
                android:id="@+id/lblMyDirectors"
                style="@style/Base.TextAppearance.AppCompat.Title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:ellipsize="end"
                android:lines="1"
                android:text="@string/general_my_directors"
                android:textColor="#666"
                android:textSize="12sp" />

        </LinearLayout>

    </LinearLayout>

    <View
        style="@style/DividerDark"
        android:background="#333" />

    <View
        style="@style/DividerDark"
        android:background="#000" />

</LinearLayout>
