<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="0"
        android:background="#444"
        android:padding="8dp">

        <TextView
            style="@style/Base.TextAppearance.AppCompat.Title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_centerVertical="true"
            android:layout_marginLeft="12dp"
            android:layout_marginStart="12dp"
            android:text="@string/general_sort_and_filter"
            android:textColor="#eee"
            android:textSize="20sp"
            tools:ignore="RelativeOverlap" />

        <ImageButton
            android:id="@+id/imgbtnClose"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:background="@drawable/flat_ripple_circle"
            android:contentDescription="@string/general_btn_close"
            android:padding="8dp"
            android:src="@mipmap/ic_close_black"
            android:tint="#eee" />

    </RelativeLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:background="@drawable/side_nav_bar">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="22dp">

            <LinearLayout
                android:id="@+id/llSortBy"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="22dp"
                android:orientation="vertical"
                android:visibility="visible">

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentBottom="true"
                        android:layout_alignParentLeft="true"
                        android:layout_alignParentStart="true"
                        android:text="@string/general_sort_by"
                        android:textAppearance="?android:attr/textAppearanceLarge"
                        android:textColor="#ccc"
                        android:textSize="15sp"
                        android:textStyle="bold"
                        tools:ignore="RelativeOverlap" />

                    <Spinner
                        android:id="@+id/spinnerSortOrder"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentBottom="true"
                        android:layout_alignParentEnd="true"
                        android:layout_alignParentRight="true" />

                </RelativeLayout>

                <View style="@style/DividerDarkLightThick" />

                <RadioGroup
                    android:id="@+id/rgSortBy"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:padding="4dp" />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/llFilterBy"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/general_filter_by"
                    android:textAppearance="?android:attr/textAppearanceLarge"
                    android:textColor="#ccc"
                    android:textSize="15sp"
                    android:textStyle="bold" />

                <View style="@style/DividerDarkLightThick" />

                <LinearLayout
                    android:id="@+id/llFilters"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:padding="4dp" />

            </LinearLayout>

        </LinearLayout>

    </ScrollView>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="0"
        android:background="#444"
        android:gravity="center_vertical|end"
        android:orientation="horizontal"
        android:padding="5dp">

        <Button
            android:id="@+id/btnOK"
            style="@style/MaterialDialogButton"
            android:layout_width="65sp"
            android:layout_height="wrap_content"
            android:text="@string/general_btn_ok"
            android:textColor="#fff" />

    </LinearLayout>

</LinearLayout>
